--- a/src/main/resources/org/scala_tools/vscaladoc/content.css
+++ b/src/main/resources/org/scala_tools/vscaladoc/content.css
@@ -9,7 +9,7 @@ body { background-color: #FFFFFF }
 
 a:link.selfref, a:visited.selfref {
  color: #555 !important;
- }
+}
 
 a:link, a:visited {
  font-family: sans-serif;
@@ -20,6 +20,11 @@ a:link, a:visited {
 a:active, a:hover {
  color:#990000;
  text-decoration: underline;
+}
+
+a.noref {
+ text-decoration: none;
+ cursor:default;
 }
 
 
